@@ -1,5 +1,10 @@
 2004-11-09  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* src/libcommon/auth_policy.h, src/libcommon/munge_defs.h,
+	  src/munged/conf.c: Moved defines from auth_policy.h to munge_defs.h.
+	  Renamed AUTH_PIPE_NAME_PREFIX to MUNGE_AUTH_PIPE_NAME_PREFIX.
+	  Renamed AUTH_PIPE_NAME_RND_BYTES to MUNGE_AUTH_PIPE_NAME_RND_BYTES.
+
 	* src/libcommon/auth_policy.h:
 	  Removed AUTH_PIPE_NAME_MAX_LEN.
 	  Changed AUTH_PIPE_NAME_RND_BYTES from 8 to 16.
